@@ -1,0 +1,39 @@
+#ifndef CONFIGURATION_H_
+#define CONFIGURATION_H_
+
+
+#include <string>
+using namespace std;
+
+
+
+class Configuration // Singleton
+{
+public:
+	Configuration();
+
+	static string getCK2Path()
+	{
+		return getInstance()->CK2Path;
+	}
+
+	static string getEU3Path()
+	{
+		return getInstance()->EU3Path;
+	}
+
+	static Configuration* getInstance()
+	{
+		if (instance == NULL)
+			instance = new Configuration();
+		return instance;
+	}
+
+private:
+	static Configuration* instance;
+
+	string	CK2Path;
+	string	EU3Path;
+};
+
+#endif // CONFIGURATION_H_
